=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.05 - IN DEVELOPMENT

=over

=item

Added a --url option to F<krang_upload_templates> to limit the upload
to templates having the specified URL below path (may be given
multiple times). [Bodo Schulze]

=item *

Added C<--no-cache> option to F<krang_publish> to bypass using
L<Krang::Cache>. [Michael Peters]

=item * 

Added the ability to use the "Find Media" interface for selecting the
image for a contributor instead of having to upload a new image each
time. [Michael Peters]

=item *

When publishing from the command line using F<krang_publish> and
C<--to-preview> a single error in publishing 1 story won't cause the
whole process to stop. It will continue on and then list failures at the
end just like publishing without C<--to-preview> does. [Michael Peters]

=item *

Added optional C<level>, C<dir_only> and C<depth_only> arguments to
method signature of L<Krang::Story>::category(). [Bodo Schulze]

=item *

Added new element class L<Krang::ElementClass::PoorTextList> which
joins the WYSIWYG capabilities of L<Krang::ElementClass::PoorText>
with the list management controls of
L<Krang::ElementClass::TextInputList>. [Bodo Schulze]

=item *

Added 'binary' argument to $publisher->additional_content_block(),
hence to Krang::IO->io_file(), to make it possible to write images
(and other binary data). [Bodo Schulze]

=item *

Fixed minor but disconcerting bug where reverting a template to an
earlier version also reverted its "Deployed Version". [Noam Weinstein]

=item *

At the request of Jesse Erlbaum, added a Size selector to
Default::image. [Bodo Schulze]

=item *

Fixed bug in F<krang.js> C<Krang.Form.submit()> where if the C<new_window>
option was true we'd pass the existing window_id to it, in essence having
2 windows with the same window_id which could cause some strange things
to happen (multiple windows with the same session). [Michael Peters]

=item *
